<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_device"
        android:icon="@drawable/ic_grinder"
        android:title="@string/textDevice" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/textMap" />

    <item
        android:id="@+id/navigation_reservation"
        android:icon="@drawable/calender"
        android:title="@string/textReserve" />

</menu>